--- a/Mvc/Agent-mvc/Agent-mvc/Views/Agent/Index.cshtml
+++ b/Mvc/Agent-mvc/Agent-mvc/Views/Agent/Index.cshtml
@@ -43,7 +43,7 @@
                 @Html.DisplayFor(modelItem => item.Nickname)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Image)
+                <img src="@item.Image" alt="Agent image" />
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Location_X)
