--- a/Mvc/Agent-mvc/Agent-mvc/Views/Shared/_Layout.cshtml
+++ b/Mvc/Agent-mvc/Agent-mvc/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Target" asp-action="Index">Targets</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Calculation" asp-action="Index">Calculations</a>
+                        </li>
                     </ul>
                 </div>
             </div>
